Generalize the pariticipating in preview APIs.